test/corpus/soft_keywords.txt
==================
Actual as an identifier
==================


fun foo() {
  val actual = IntArray(n)
  actual[0]++
}

---
(source_file
  (function_declaration
  (simple_identifier)
  (function_value_parameters)
  (function_body
    (statements
    (property_declaration
      (binding_pattern_kind)
      (variable_declaration
      (simple_identifier))
      (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments
        (value_argument
          (simple_identifier))))))
    (postfix_expression
      (indexing_expression
      (simple_identifier)
      (indexing_suffix
        (integer_literal))))))))
